examples/test/testpolicy14594.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14594
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key30: value23
      key46: value7
      key48: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value40
          key4: value26
      podSelector:
        matchLabels:
          key32: value42
          key10: value39
          key44: value20
